# StocksManager

./: .gitignore  main.py  output.json  pyproject.toml
app/agents/: agent_response_model.py  decision_agent.py  fundamental_analysis_agent.py  quant_agent.py  stream.py
app/analyser/: indicators.py
app/api/: gtt.py  testing_router.py
app/brokers/zerodha/: auth.py  auth_token.py  gtt.py  historical_data.py  holdings.py
app/core/: config.py  logger_config.py
app/fundamentals/: balance_sheet.py  company_overview.py  fundamental_analysis.py  profit_loss.py
app/schedulers/: fundamentals_scheduler.py  portfolio_scheduler.py
app/service/: fundamentals_service.py  gtt_service.py  holding_service.py  instrument_service.py  market_data.py  market_data_raw.py
app/store/: __init__.py  db.py  models.py
app/tools/: fundamentals_tools.py  quant_tools.py
docs/: market_data_reference.md
