[project]
name = "intelligent-stock-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "psycopg2-binary",
    "kiteconnect",
    "langchain",
    "langchain-openai",
    "yfinance",
    "apscheduler",
]
